# metafinger-viewer

./: .gitignore  README.md  common.py  pyproject.toml  requirements.txt  rerun_loader_urdf.py  server.py  setup.py  test.py  viewer.py
assets/: index-BzllbV4X.js  index-CFQy8XVZ.css  re_viewer-wUgxm5am.js
config/: address.yaml  camera.yaml  finger.yaml  skill.yaml
metafinger_viewer/: __init__.py  __version__.py  viewer.py
metafinger_viewer/cli/: __init__.py  run.py
metafinger_viewer/configs/: __init__.py  viewer.py
metafinger_viewer/modules/protobuf/: metafinger_msg.proto
metafinger_viewer/modules/zmq/: __init__.py  metafinger.py
metafinger_viewer/utils/: data_utils.py  event_utils.py  log_utils.py  process_utils.py
models/: __init__.py  finger_net.py
modules/: __init__.py
modules/finger/: def_node.txt  finger.stl  surf_coor.txt  surf_node.txt  surf_tri.txt
modules/protobuf/: cam_msg.proto  cam_msg_pb2.py  dual_finger_msg.proto  dual_finger_msg_pb2.py  finger_msg.proto  finger_msg_pb2.py  generate_pb.sh  robot_msg.proto  robot_msg_pb2.py
modules/robotiq/arg85/: arg85.urdf
modules/robotiq/arg85/urdf/: robotiq_arg85_description.urdf.xacro
modules/zmq/: finger.py
templates/finger/: deform_node.txt
templates/metafinger/: surface_coordinate.txt  surface_triangle.txt
